# vie_history

./: .env.example  .gitignore  CONTRIBUTING.md  DEV_COMMANDS.md  Makefile  Plan.md  README.md  README.vi.md  SPEC.md  docker-compose.full.yml  docker-compose.yml  user_request_full.md
apps/api/: Dockerfile  alembic.ini  check_db.py  pyproject.toml  pytest.ini  scratch.py  scratch_test_stream.py  seed_hcm_campaign.py  test_run.py
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 001_initial.py  002_add_brain_tables.py  003_timeline_graph.py  37fc740d2316_add_settings_column_to_user_model.py  3b888db4b382_add_knowledge_drafts.py  548698174f4d_add_missing_user_columns.py  a5c68d4723b8_create_audit_logs.py  acfbf00f3c62_add_project_and_draft_tables.py  add_academic_metadata.py  add_performance_indexes.py
apps/api/app/: __init__.py  containers.py  factory.py  main.py
apps/api/app/agents/: __init__.py  agent_graph.py  agent_state.py  complexity_classifier.py  domain_classifier.py  langgraph_orchestrator.py  orchestrator.py  synthesizer.py
apps/api/app/api/: __init__.py
apps/api/app/core/: __init__.py  audit.py  cache.py  cache_v2.py  circuit_breaker.py  config.py  context.py  credentials.py  database.py  distributed_lock.py  errors.py  exceptions.py  locking.py  logging.py  metrics.py  observability.py  profiler.py  prompts.py  rate_limiter.py  rbac.py  sanitization.py  security.py  security_headers.py  telemetry.py
apps/api/app/events/: __init__.py  bus.py  handlers.py
apps/api/app/mcp/: server.py
apps/api/app/middleware/: compression.py
apps/api/app/models/: __init__.py  audit.py  document.py  entity.py  evolution.py  feedback.py  graph.py  ingest_job.py  project.py  reset_request.py  session.py  timeline.py  user.py  wiki.py
apps/api/app/repositories/: __init__.py  base.py  document.py  knowledge_draft.py  session.py  user.py
apps/api/app/retrieval/: __init__.py  query_expander.py  reranker.py  sql_retriever.py
apps/api/app/schemas/: __init__.py  auth.py  document.py  feedback.py  graph.py  ingest.py  project.py  query.py  session.py  timeline.py  wiki.py
apps/api/app/services/: __init__.py
apps/api/app/worker/: __init__.py  settings.py  worker.py
apps/api/app/workers/: arq_tasks.py  queue.py  tasks.py
apps/api/scratch/: reset_admin_password.py  test_hybrid.py
apps/api/storage/: nli_cache.db
apps/api/tests/: conftest.py
apps/api/tests/agents/: test_dynamic_routing.py  test_langgraph_orchestrator.py  test_reflection_loop.py  test_trace_logging.py
apps/api/tests/integration/: test_api.py  test_contract.py  test_drafts.py  test_profile.py  test_query.py  test_retrieval.py  test_wiki.py
apps/api/tests/retrieval/: test_entity_boosting.py
apps/api/tests/services/: test_dynamic_retrieval.py  test_multilayer_verifier.py  test_query_expansion.py  test_relation_analyzer.py  test_sequence_solver.py  test_tool_selector.py
apps/api/tests/unit/: test_agent_safety.py  test_answer_synthesizer.py  test_brain_router.py  test_cache.py  test_citation_verifier.py  test_claim_extractor.py  test_classifier.py  test_config.py  test_conflict_resolution.py  test_content_cleaner.py  test_credentials.py  test_cross_encoder_reranker.py  test_domain_classifier.py  test_eval_retrieval.py  test_exceptions.py  test_experiment_controller.py  test_fusion.py  test_graph_reasoner.py  test_graphrag.py  test_historical_reasoning_engine.py  test_historical_utils.py  test_intent_classifier.py  test_meilisearch.py  test_metadata_extractor.py  (+21 more)
(+291 files in other folders)
