[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "historiai-api"
version = "0.1.0"
description = "HistoriAI Agent - AI Research for Vietnamese History"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # AI / Retrieval
    "anthropic>=0.20.0",
    "llama-index>=0.10.0",
    "sentence-transformers>=2.4.0",
    "qdrant-client>=1.7.0",
    "rank-bm25>=0.2.2",
    "pyvi>=0.1.0",

    # Ingestion
    "httpx>=0.27.0",
    "trafilatura>=1.8.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.12.0",
    "unstructured>=0.12.0",
    "pypdfium2>=4.30.0",

    # Workers
    "redis>=5.0.0",
    "rq>=1.16.0",
    "arq>=0.25.0",

    # Observability
    "prometheus-client>=0.20.0",
    "langfuse>=0.1.0",

    # Persistence
    "meilisearch-python-sdk>=2.1.0",

    # Utils
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.7",
    "sentry-sdk>=1.40.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "structlog>=24.0.0",
    "neo4j>=5.18.0",
    "langgraph>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "bandit>=1.7.9",
]
eval = [
    "ragas>=0.1.0",
    "datasets>=2.18.0",
    "anthropic>=0.20.0",
    "openai>=1.12.0",
]
mlflow = [
    "mlflow>=2.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E", "F", "W",
    "I", "N",
    "UP", "S", "B", "A", "C4", "T20",
    "PIE", "PYI", "RSE", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "TRY", "RUF",
]
ignore = [
    "E501",      # line too long (handled by formatter)
    "S311",      # standard pseudo-random generators are not forbidden
    "PLR0913",   # too many arguments
    "PLR2004",   # magic value used instead of constant
    "ARG001",    # unused function argument
    "TRY003",    # raise exception from exception cause
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG001"]
"app/__init__.py" = ["F401"]
"app/core/telemetry.py" = [
    "PLC0415",  # import inside try blocks (intentional for graceful fallback)
    "PLW0603",  # global variables for module state (intentional)
    "PLW0602",  # global without assignment (read-only in some functions)
    "ERA001",   # commented-out OTLP config (placeholder for future use)
    "S110",     # try-except-pass for trace context retrieval
]
"app/core/metrics.py" = [
    "PLW0603",  # global for registry singleton (intentional)
    "PLC0415",  # import inside function for lazy loading (intentional)
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
